updated parent POM to build all modules for JDK 11