@@ -139,8 +139,9 @@
         <github.global.server>github</github.global.server>
 
         <!-- JAVA COMPILER VERSIONS -->
-        <jdk.source.version>1.8</jdk.source.version>
-        <jdk.target.version>1.8</jdk.target.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- DEPENDENCY VERSIONS -->
         <org.osgi.core.version>6.0.0</org.osgi.core.version>
@@ -152,24 +153,23 @@
         <powermock.version>1.6.5</powermock.version>
 
         <!-- PLUGIN VERSIONS -->
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-        <maven-dependency-plugin.version>3.0.0</maven-dependency-plugin.version>
-        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
-        <maven-site-plugin.version>3.7</maven-site-plugin.version>
-        <maven-assembly-plugin.version>3.0.0</maven-assembly-plugin.version>
+        <maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+        <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
+        <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <maven-scm-plugin.version>1.9.5</maven-scm-plugin.version>
-        <maven-bundle-plugin.version>3.2.0</maven-bundle-plugin.version>
+        <maven-scm-plugin.version>1.11.1</maven-scm-plugin.version>
+        <maven-bundle-plugin.version>3.5.0</maven-bundle-plugin.version>
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-        <native-maven-plugin.version>1.0-alpha-8</native-maven-plugin.version>
-        <license-maven-plugin.version>1.14</license-maven-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+        <native-maven-plugin.version>1.0-alpha-9</native-maven-plugin.version>
+        <license-maven-plugin.version>1.19</license-maven-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
-        <site-maven-plugin.version>0.12</site-maven-plugin.version>
-        <jdeb.version>1.5</jdeb.version>
-        <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
+        <jdeb.version>1.7</jdeb.version>
+        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <s3-upload-maven-plugin.version>1.4</s3-upload-maven-plugin.version>
         <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
 
@@ -324,7 +324,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -335,7 +335,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -412,11 +412,20 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>${jdk.source.version}</source>
-                        <target>${jdk.target.version}</target>
+
+                        <!-- TODO :: ENABLE BUILD FOR JDK 11 RELEASE -->
+                        <!--<release>${java.version}</release>-->
+
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
                         <verbose>false</verbose>
+
+                        <compilerArgs>
+                            <!-- TODO :: ELIMINATE JDK INTERNAL REFS -->
+                            <arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                            <arg>--add-exports</arg><arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        </compilerArgs>
+
                     </configuration>
                 </plugin>
 
@@ -448,6 +457,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${maven-javadoc-plugin.version}</version>
+                    <configuration>
+                        <additionalOptions>
+                            <!-- TODO :: ELIMINATE JDK INTERNAL REFS -->
+                            <additionalOption>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</additionalOption>
+                            <additionalOption>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</additionalOption>
+                        </additionalOptions>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
